Created table layout

--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>World's Best Game</title>
 </head>
 <body>
+ <table id="table">
+
+  <tr id="row-1">
+    <td>X</td><td>O</td><td>X</td>
+  </tr>
+  <tr id="row-2">
+    <td>X</td><td>O</td><td>X</td>
+  </tr>
+  <tr id="row-3">
+    <td>X</td><td>O</td><td>X</td>
+  </tr>
+
+  <tr>
+
+  </tr>
+</table>
 
 </body>
 </html>
