Added stylesheet to HTML

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>World's Best Game</title>
+  <link rel="stylesheet" type="text/css" href="css/design.css">
 </head>
 <body>
  <table id="table">
