--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-  <title>World's Best Game</title>
-  <link rel="stylesheet" type="text/css" href="css/design.css">
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" type="text/css" href="css/design.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
 </head>
+
 <body>
- <table id="table">
-  <tr id="row-1">
-    <td>X</td><td>O</td><td>X</td>
-  </tr>
-  <tr id="row-2">
-    <td>X</td><td>O</td><td>X</td>
-  </tr>
-  <tr id="row-3">
-    <td>X</td><td>O</td><td>X</td>
-  </tr>
+    <table id="table">
+        <tr id="row-1">
+            <td id="top-left" value= 0></td>
+            <td id="top-mid" value= 1></td>
+            <td id="top-right" value = 2></td>
+        </tr>
+        <tr id="row-2">
+            <td id="mid-left" value = 3></td>
+            <td id="mid-mid" value = 4></td>
+            <td id="mid-right" value = 5></td>
+        </tr>
+        <tr id="row-3">
+            <td id="bottom-left" value = 6></td>
+            <td id="bottom-mid" value = 7></td>
+            <td id="bottom-right" value = 8></td>
+        </tr>
+    </table>
 
-  <tr>
-
-  </tr>
-</table>
-
+    <script src="tic-tac-toe.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
+
 </html>
